# HW3D

./: CMakeLists.txt  README.md
include/: triangle.h  triangle_test.h
src/: main.cpp  triangle.cpp  triangle_test.cpp
test/: triangle_test.cpp
